# myProject

admin/: Cargo.toml  Dockerfile  Trunk.toml  generate_ids.py  index.html
admin/src/: attribute_value.rs  attributes.rs  cpu.rs  ids.rs  main.rs  page.rs  synth_bench_client.rs
admin/src/components/: graph.rs
admin/src/components/qraph/: graph.rs
admin/src/components/shaders/: point.frag  selected.frag  selected.vert  solid.frag
admin/src/serde/: mod.rs  synth_bench.rs
admin/static/: default.scss  graph.scss  roboto.css  theme.scss
alma/: Cargo.toml  Dockerfile
alma/src/: bonfire_client.rs  graphql_schema.rs  main.rs  parse.rs  parse_dispatcher.rs  update.rs
alma/src/parsers/: mod.rs  operating_system_parser.rs  parse_result.rs  parser_trait.rs  ram_aspect_parser.rs  ram_parser.rs  screen_resolution_parser.rs  screen_size_parser.rs  ssd_aspect_parser.rs  storage_capacity_parser.rs  storage_parser.rs
alma/src/serde/: grammars.rs  graphql_error.rs  mod.rs
cerebro/: Cargo.toml  Dockerfile
cerebro/python/: .gitignore  koshka.py  linear.py  ogon.py  requirements.txt
cerebro/src/: bonfire_client.rs  graphql_schema.rs  main.rs  synth.rs  update.rs
cerebro/src/serde/: attributes.rs  mod.rs  search.rs
cerebro/src/tch_models/: cpu_performance.rs  mod.rs
lightning/: Cargo.toml  index.html
lightning/src/: db.rs  lib.rs  main.rs  route.rs
lightning/src/components/atoms/: cart_product.rs  input_filter.rs  mod.rs
lightning/src/components/molecules/: mod.rs
lightning/src/components/organisms/: articles_content.rs  footer_suport_sponsored.rs  home_content.rs  mod.rs  navigation_buttons.rs
lightning/src/pages/: sponsored.rs  support.rs
lightning/src/styles/: footer.css  support_content.css
todo/: Cargo.toml  index.html
todo/src/: db.rs  input.css  lib.rs  main.rs  route.rs
todo/src/components/atoms/: custom_button.rs  custom_input.rs  mod.rs
todo/src/components/molecules/: footer.rs  footer_issue.rs  footer_issue_redaction.rs  form_redaction.rs  header.rs  input_field.rs  issue_fields.rs  issue_fields_redaction.rs  mod.rs  todo_list.rs
todo/src/pages/: issue_page.rs  issue_page_redaction.rs  issues_page.rs  mod.rs
website/: Dockerfile  Dockerfile.dev  env.local.dev  env.local.prod  package-lock.json  package.json
website/pages/: 404.tsx  [id].tsx  _app.tsx  _document.tsx  form-fill-thanks.tsx  global.scss  index.tsx  support.tsx  video-editor.tsx
website/pages/admin/: cpuParsing.tsx  index.tsx  modal.html  regexes.tsx
website/pages/articles/: index.tsx
website/pages/product/: [id].tsx
website/src/: theme.ts
website/src/api/: dealTechBaseInstance.ts  dealTechRedditBotInstance.ts  fetchArticle.ts  fetchArticles.ts  fetchFilters.ts  fetchRedditMarkup.ts  fetchSortOrders.ts  searchLaptops.ts
website/src/client/: AdimClient.ts  AuthClient.ts  RegexClient.ts
website/src/components/AmazonPrice/: AmazonPrice.tsx  amazonPrice.module.scss
website/src/components/ArticleCard/: ArticleCard.tsx
website/src/components/ArticleSection/: ArticleSection.tsx  articleSection.module.scss
website/src/components/CPUTable/: index.tsx
website/src/ids/: AttributeIds.ts
website/src/interfaces/: article.ts  articleDetailBody.ts  content.ts  contentTypes.ts  detailedArticle.ts  fetchedArticle.ts  fetchedRedditProductMarkup.ts  offer.ts  sources.ts
website/src/lib/: smtp.js
website/src/styles/: articleDetail.ts  articles.ts  color-wheel.ts  index.ts  search.ts  support.ts  thanks.ts  video-editor.ts
website/src/utils/: colors.ts  getAttributes.ts  getURLDisplayAttributes.ts
(+30 files in other folders)
