[package]
name = "lightning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = { version = "1.1", features = ["serde","v4", "js"] }
reqwest= { version = "0.11", features = ["json"] }
reqwasm = "0.5.0"
wasm-bindgen = "0.2"
gloo-console= "0.2"
wasm-bindgen-futures = "0.4"
gloo = "0.8.0"
stylist = {version = "0.12.0", features=["yew", "yew_use_style",  "yew_integration", "parser"]}
yew-router = "0.17.0"
gql_client = "1.0.6"
yew-interop = "0.3.0"

[dependencies.web-sys]
version = "0.3"
features = [
  "MouseEvent",
  "DomRect",
  "Element",
  "HtmlSelectElement"
]


