[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
anyhow = "1"
serde = "1"
serde_derive = "1"
serde_json = "1"
uuid = { version = "1.1", features = ["serde","v4", "js"] }
reqwest= { version = "0.11", features = ["json"] }
reqwasm = "0.5.0"
wasm-bindgen = "0.2"
gloo-console= "0.2"
wasm-bindgen-futures = "0.4"
gloo = "0.8.0"
stylist = {version = "0.10.1", features=["yew"]}
yew-router = "0.16"
gql_client = "1.0.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "MouseEvent",
  "DomRect",
  "Element",
  "HtmlSelectElement"
]


